// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea displays label and text-area-input 1`] = `
<div
  className="form-control"
>
  <label
    className="label"
  >
    <span>
      Message
    </span>
  </label>
  <textarea
    className="h-24 textarea textarea-bordered textarea-primary"
    maxLength={10000}
    minLength={3}
    placeholder="Enter your message here"
    required={true}
  />
</div>
`;

exports[`TextArea displays text-area-input without label 1`] = `
<div
  className="form-control"
>
  <textarea
    className="h-24 textarea textarea-bordered textarea-primary"
    maxLength={10000}
    minLength={3}
    placeholder="Enter your message here"
    required={true}
  />
</div>
`;
